[package]
name = "ustime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
config = "0.13.3"
actix-rt = "1.0.0"
actix-web = "2.0.0"
serde = { version ="1.0.104", features = ["derive"] }
postgres = "0.19.5"